--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
     <groupId>com.guestful.module</groupId>
     <artifactId>guestful.module.twilio-client</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Guestful :: Module :: Twilio Client</name>
     <inceptionYear>2013</inceptionYear>
@@ -42,7 +42,7 @@
         <connection>scm:git:git@github.com:guestful/${github.name}.git</connection>
         <developerConnection>scm:git:git@github.com:guestful/${github.name}.git</developerConnection>
         <url>https://github.com/guestful/${github.name}</url>
-        <tag>guestful.module.twilio-client-1.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <build>
